# cradle86

./: .gitignore  .gitmodules
case/: case.js
com1test/: Makefile  bochs.cfg  boot.asm
cradle86pcb/: cradle86pcb.kicad_pcb  cradle86pcb.kicad_prl  cradle86pcb.kicad_pro  cradle86pcb.kicad_sch  gen.py  place.py
cradle86pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
embedded-hidos/: MSDOS.SYS  Makefile  VM_IO.SYS  idea.md
mini-dos/: .gitignore  Makefile  boot.asm  bootloader.md  design.md  isr.md  main.asm  run-qemu.sh
mini-dos/tools/: log_parser.py
monitor/: .gitignore  CMakeLists.txt  Makefile  discussion.md  main.cpp  memaccess.md  memo01.txt  project.md  reset_vec.asm  run-xr.exp  run-xs.exp  test-c.c  test.asm  test_runner.py
